Add some comment lines

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* || GENERAL STUDIES */
+/* || GENERAL STYLES */
 body{
     font-family: "outfit";
     min-height: 100vh;
